# DDAS-project

./: .gitignore  validate_system.py
agent/: .env.example  .gitignore  README.md  pyproject.toml
agent/app/: __init__.py  config.py  constants.py  logging_config.py  main.py
agent/app/backend_client/: __init__.py  auth.py  config_client.py  feedback_client.py  lookup_client.py  metadata_store.py  registration_client.py  sync_client.py
agent/app/cache/: __init__.py  database.py  models.py  repository.py
agent/app/decision/: __init__.py  engine.py  explain.py
agent/app/features/: __init__.py  exact.py  extractor.py  fuzzy.py  semantic.py
agent/app/lifecycle/: __init__.py  heartbeat.py  shutdown.py  startup.py
agent/app/permissions/: __init__.py  checker.py  errors.py  guidance.py
agent/app/proxy_events/: __init__.py  adapters.py  event_listener.py  handler.py
agent/app/tests/: __init__.py
agent/app/ui/: __init__.py  notifier.py  prompts.py
agent/docs/: AGENT_ARCHITECTURE.md  AGENT_FLOW.md  PERMISSIONS.md
agent/scripts/: install_linux.sh  install_macos.sh  install_windows.ps1
agent/tests/: simulate_event.py
backend/: .env.example  .gitignore  PHASE_5_SUMMARY.txt  README.md  alembic.ini  manage_workers.py  pyproject.toml  pytest.ini  run_tests.py  test.ps1
backend/alembic/: env.py
backend/app/: config.py  constants.py  logging_config.py  main.py
backend/app/api/: alerts.py  alerts_endpoints.py  detection_routes.py  ingestion.py  models.py  observability.py  router.py  routes.py  schemas.py
backend/app/db/: base.py  database.py  models.py
backend/app/detection/: exact_detection.py
backend/app/middleware/: auth.py  rate_limit.py  request_logging.py
backend/app/models/: __init__.py  user.py
backend/app/schemas/: __init__.py  alerts.py  common.py  detection.py  enums.py  errors.py  events.py  filters.py  health.py  lookup.py  signals.py
backend/app/security/: __init__.py  auth.py  crypto.py  jwt.py  rate_limiter.py  validation.py
backend/app/services/: alert_service.py  alerts.py  alerts_impl.py  detection.py  detection_impl.py  detection_service.py  ingest_service.py  ingestion.py  ingestion_impl.py
backend/docs/: ARCHITECTURE.md  PHASE_6_SUMMARY.txt
backend/tests/: conftest.py
(+93 files in other folders)
