[tool.poetry]
name = "ddas-backend"
version = "0.1.0"
description = "DDAS Backend API - Distributed Duplicate Asset Scanner"
authors = ["DDAS Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.104.0"
uvicorn = {version = "^0.24.0", extras = ["standard"]}
sqlalchemy = "^2.0"
psycopg2-binary = "^2.9"
alembic = "^1.12"
pydantic = "^2.0"
pydantic-settings = "^2.0"
python-dotenv = "^1.0"
faiss-cpu = "^1.7"
redis = "^5.0"
pyjwt = "^2.8"
passlib = {version = "^1.7", extras = ["bcrypt"]}
python-multipart = "^0.0.6"
requests = "^2.31"
numpy = "^1.24"
sentence-transformers = "^2.2"
python-json-logger = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-cov = "^4.1"
pytest-asyncio = "^0.21"
black = "^23.0"
flake8 = "^6.1"
mypy = "^1.7"
ruff = "^0.1"
httpx = "^0.25"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--cov=app --cov-report=html"

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
select = ["E", "F", "I"]
line-length = 100
